# TopoRecognizer

./: CMakeLists.txt  LinearCurve.cpp  LocalPointset.cpp  Plane.cpp  PointCloudGenerator.cpp  QuadraticCurve.cpp  Spline.cpp  TriplelinePointsetClass.cpp  TriplelinePointsetClass.h  main.cpp  main.h
input/: FCT1  Mappe1.xlsx  PC1  testFct
input/output_n1/: 1_n_0_ID_LocalPSAfterMLS  1_n_1_ID_LocalPSAfterMLS  1_n_2_ID_LocalPSAfterMLS  1_n_3_ID_LocalPSAfterMLS  1_n_4_ID_LocalPSAfterMLS  1_n_5_ID_LocalPSAfterMLS  1_n_6_ID_LocalPSAfterMLS  1_n_7_ID_LocalPSAfterMLS  1_n_8_ID_LocalPSAfterMLS  1_n_9_ID_LocalPSAfterMLS  Distances_LinearCurve_45  Distances_OriginOfCoordinateSystemToOriginPoint  LP_After_M1  LP_CoordinateSystemToOriginPoint  LP_WLS_LinearCurve_45  LP_WLS_LinearCurve_AfterParallel  LP_begin  LP_cubicWeights  OutputTest  PointToPointDistances  QuadraticCurve_Matrix2D  QuadraticCurve_solution  QuadraticCurve_solverY2D  QuadraticPointToPointDistances  TriplelinePointsetAfterMLS  WLSLinearCurve_Matrix2D  WLSLinearCurve_Matrix3D  WLSLinearCurve_solution  WLSLinearCurve_solverY2D  WLSLinearCurve_solverY3D  WLSPlane_Matrix  WLSPlane_afterM1  WLSPlane_solution  WLSPlane_solverY  WLS_LinearCurve_Param_AfterParallel  WLS_LinearCurve_Param_BeforeParallel  WLS_LinearCurve_Values1_AfterCalculation  WLS_LinearCurve_Values1_AfterParallel  WLS_LinearCurve_Values1_BeforeParallel  (+3 more)
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
(+6 files in other folders)
